# joseki

./: Cargo.toml  LICENSE  README.md
src/: board.rs  game.rs  lib.rs  main.rs
tests/: game.rs
tests/games/: AlphaGo-Lee_Sedol-1.sgf  AlphaGo-Lee_Sedol-2.sgf  AlphaGo-Lee_Sedol-3.sgf  AlphaGo-Lee_Sedol-4.sgf  AlphaGo-Lee_Sedol-5.sgf
