[package]
name = "joseki"
version = "0.1.0"
authors = ["Kevin Yap <me@kevinyap.ca>"]
description = "Go/Baduk engine."
keywords = ["go", "baduk"]
homepage = "https://github.com/iKevinY/joseki"
repository = "https://github.com/iKevinY/joseki"
readme = "README.md"
license = "MIT"

[dependencies]
regex = "0.2"
